--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.25.0
-scikit-learn==1.3.0
-pandas==2.0.3
-numpy==1.24.3
+scikit-learn==1.4.0  # Versión compatible con Python 3.13
+numpy==1.26.0        # Versión que no requiere distutils
+pandas==2.1.0
 joblib==1.3.2
