--- a/Parcial1_TAM_2025/dashboard_streamlit/requirements.txt
+++ b/Parcial1_TAM_2025/dashboard_streamlit/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-scikit-learn
-pandas
-numpy
-joblib
+--prefer-binary  # Fuerza usar wheels precompilados
+streamlit==1.25.0
+scikit-learn==1.4.0
+numpy==2.0.0  # Versión compatible con Python 3.13
+pandas==2.2.0
+joblib==1.3.2
