--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 pip>=25.1.1
-streamlit==1.25.0
-scikit-learn==1.4.0
-numpy==1.24.4
-pandas==2.1.0
-joblib==1.3.2
+setuptools
+numpy>=1.24.4
+pandas
+streamlit
+joblib
+matplotlib
+scikit-learn
