--- a/Parcial1_TAM_2025/dashboard_streamlit/requirements.txt
+++ b/Parcial1_TAM_2025/dashboard_streamlit/requirements.txt
@@ -1,6 +1,6 @@
---prefer-binary  # Fuerza usar wheels precompilados
 streamlit==1.25.0
 scikit-learn==1.4.0
-numpy==1.23.5  # Versión compatible con Python 3.13
-pandas==2.2.0
-joblib==1.3.2
+numpy>=1.24.0
+pandas
+matplotlib
+joblib
